--- a/Assignment8_PatriciaBialek_0738386/index.html
+++ b/Assignment8_PatriciaBialek_0738386/index.html
@@ -53,7 +53,7 @@
  
          </div>
  
-         <!-- Additional Columns Below -->
+         <!-- 2nd Row -->
          <div class="row">
  
              <!-- Column 4 -->
@@ -74,7 +74,7 @@
  
      </div>
  
-     <!-- Modals -->
+     <!-- Selectable pop-up -->
      <div class="modal fade" id="myModal">
          <div class="modal-dialog">
              <div class="modal-content">
